# target/generated-sources/swagger/src/main/java/api/IndicatorApi.java
@@ -1,54 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (3.0.34).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package api;
-
-import model.MapOfCountries;
-import io.swagger.v3.oas.annotations.Operation;
-import io.swagger.v3.oas.annotations.Parameter;
-import io.swagger.v3.oas.annotations.enums.ParameterIn;
-import io.swagger.v3.oas.annotations.responses.ApiResponses;
-import io.swagger.v3.oas.annotations.responses.ApiResponse;
-import io.swagger.v3.oas.annotations.media.ArraySchema;
-import io.swagger.v3.oas.annotations.media.Content;
-import io.swagger.v3.oas.annotations.media.Schema;
-import io.swagger.v3.oas.annotations.security.SecurityRequirement;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.bind.annotation.CookieValue;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-import java.util.Map;
-
-@javax.annotation.Generated(value = "io.swagger.codegen.v3.generators.java.SpringCodegen", date = "2022-06-26T20:34:21.785972722+02:00[Europe/Bratislava]")
-@Validated
-public interface IndicatorApi {
-
-    @Operation(summary = "Get a specified indicator for a set of countries", description = "One indicator for a group of countries", tags={ "indicator" })
-    @ApiResponses(value = { 
-        @ApiResponse(responseCode = "200", description = "OK", content = @Content(mediaType = "application/json", schema = @Schema(implementation = MapOfCountries.class))),
-        
-        @ApiResponse(responseCode = "405", description = "Invalid input"),
-        
-        @ApiResponse(responseCode = "500", description = "Server error"),
-        
-        @ApiResponse(responseCode = "403", description = "Unauthorised") })
-    @RequestMapping(value = "/indicator/{iname}",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    ResponseEntity<MapOfCountries> getInd(@NotNull @Parameter(in = ParameterIn.QUERY, description = "Sector code" ,required=true,schema=@Schema()) @Valid @RequestParam(value = "sector", required = true) String sector, @NotNull @Parameter(in = ParameterIn.QUERY, description = "Activity code" ,required=true,schema=@Schema()) @Valid @RequestParam(value = "activity", required = true) String activity, @Parameter(in = ParameterIn.PATH, description = "Indicator name", required=true, schema=@Schema()) @PathVariable("iname") String iname, @Parameter(in = ParameterIn.HEADER, description = "Interface" ,schema=@Schema()) @RequestHeader(value="Content-Language", required=false) String contentLanguage);
-
-}
-
